# pypdfcodebook

./: .gitignore  README.md  pyproject.toml  steps.txt  temp.csv
.github/ISSUE_TEMPLATE/: integrate-mcp.md
.github/workflows/: test.yml
Admin/: pdfcb_00b_file_naming_convention.md  pdfcb_00c_pypirc_instructions.md  pdfcb_00d_testpypi_guide.md  pdfcb_00e_workwithMCP.md  pdfcb_00f_developmentnotes.md  pypiapi_donotshare.txt  testpypi_guide.md
Readings/: Guide_to_metadata.md
sample_data/: README.md  pdfcb_00a_projectoverview.md  pdfcb_00b_keyterms.md  pdfcb_00c_sampledata.csv  pdfcb_00d_data_structure.py
sample_test_package/: pyproject.toml
sample_test_package/pycodebook_20250806.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sample_test_package/sample_test_package/: __init__.py
src/pyncoda_codebook.egg-info/: PKG-INFO  SOURCES.txt
src/pyncoda_codebook_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pypdfcodebook/: __init__.py  codebook.py  ncoda_04a_Figures.py  ncoda_06a_PDF_functions.py  ncoda_06c_Codebook.py  pdfcb_03a_figures.py  pdfcb_03b_pdffunctions.py  pdfcb_03c_codebook.py
src/pypdfcodebook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_codebook_no_keyterms_projectoverview.py  test_codebook_sample_data.py  test_codebook_with_images.py  test_simple.ipynb  test_simple.py
