[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycodebook-20250806"
version = "0.3.3"
description = "test package"
authors = [
    {name="Ruchika Shukla", email="ruchikashuka@tamu.edu"},
    {name="Nathanael Rosenheim", email="nrosenheim@arch.tamu.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
